--- a/core/client/app/index.html
+++ b/core/client/app/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-    <title>Ghost Admin</title>
+    <title>Coding House Blog</title>
 
     {{content-for 'head'}}
 
@@ -17,19 +17,18 @@
     <meta http-equiv="cleartype" content="on" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="apple-mobile-web-app-title" content="Ghost" />
+    <meta name="apple-mobile-web-app-title" content="Coding House Blog" />
 
-    <link rel="shortcut icon" href="{{asset "favicon.png"}}" />
-    <link rel="apple-touch-icon-precomposed" href="{{asset "img/touch-icon-iphone.png" ghost="true"}}" />
-    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="{{asset "img/touch-icon-ipad.png" ghost="true"}}" />
-    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="{{asset "img/small.png" ghost="true"}}" />
-    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="{{asset "img/medium.png" ghost="true"}}" />
+    <link rel="shortcut icon" href="{{asset "img/favicon.png"}}" />
+    <link rel="apple-touch-icon" href="{{asset "img/apple-touch-icon.png" ghost="true"}}">
+    <link rel="apple-touch-icon" sizes="72x72" href="{{asset "img/apple-touch-icon-72x72.png" ghost="true"}}">
+    <link rel="apple-touch-icon" sizes="114x114" href="{{asset "img/apple-touch-icon-114x114.png" ghost="true"}}">
 
-    <meta name="application-name" content="Ghost" />
+    <meta name="application-name" content="Coding House Blog" />
     <meta name="msapplication-TileColor" content="#ffffff" />
-    <meta name="msapplication-square70x70logo" content="{{asset "img/small.png" ghost="true"}}" />
-    <meta name="msapplication-square150x150logo" content="{{asset "img/medium.png" ghost="true"}}" />
-    <meta name="msapplication-square310x310logo" content="{{asset "img/large.png" ghost="true"}}" />
+    <meta name="msapplication-square70x70logo" content="{{asset "img/apple-touch-icon.png" ghost="true"}}" />
+    <meta name="msapplication-square150x150logo" content="{{asset "img/apple-touch-icon-72x72.png" ghost="true"}}" />
+    <meta name="msapplication-square310x310logo" content="{{asset "img/apple-touch-icon-114x114.png" ghost="true"}}" />
 
     {{#each configuration}}
         <meta name="env-{{this.key}}" content="{{this.value}}" />
