--- a/core/client/app/index.html
+++ b/core/client/app/index.html
@@ -19,7 +19,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="apple-mobile-web-app-title" content="Coding House Blog" />
 
-    <link rel="shortcut icon" href="{{asset "img/favicon.png"}}" />
+    <link rel="shortcut icon" href="{{asset "img/favicon.ico"}}" />
     <link rel="apple-touch-icon" href="{{asset "img/apple-touch-icon.png" ghost="true"}}">
     <link rel="apple-touch-icon" sizes="72x72" href="{{asset "img/apple-touch-icon-72x72.png" ghost="true"}}">
     <link rel="apple-touch-icon" sizes="114x114" href="{{asset "img/apple-touch-icon-114x114.png" ghost="true"}}">
